--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
         "karma-chrome-launcher": "^0.2.3",
         "karma-firefox-launcher": "^0.1.7",
         "karma-jasmine": "^0.3.8",
-        "protractor": "^4.0.9"
+        "protractor": "^4.0.9",
+        "nodemon": "^1.14.10"
+    },
+    "dependencies": {
+        "express": "^4.16.2",
+        "mongoose": "^4.13.9"
     },
     "scripts": {
         "postinstall": "bower install",
