--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     },
     "dependencies": {
         "express": "^4.16.2",
-        "mongoose": "^4.13.9"
+        "mongoose": "^4.13.9",
+        "mongoose-timestamp": "^0.6.0"
     },
     "scripts": {
         "postinstall": "bower install",
         "prestart": "npm install",
-        "start": "http-server ./app -a localhost -p 8000 -c-1",
+        "start": "node server.js",
         "pretest": "npm install",
         "test": "karma start karma.conf.js",
         "test-single-run": "karma start karma.conf.js --single-run",
